--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,71 @@
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot?yicm0g');
+	src:url('fonts/icomoon.eot?#iefixyicm0g') format('embedded-opentype'),
+		url('fonts/icomoon.woff?yicm0g') format('woff'),
+		url('fonts/icomoon.ttf?yicm0g') format('truetype'),
+		url('fonts/icomoon.svg?yicm0g#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-estrella:before {
+	content: "\f02a";
+	color: #F2E87E;
+	margin-right: 0.4em;
+	position: relative;
+	top: .1em;
+}
+.icon-lapiz:before {
+	content: "\e600";
+	margin-right: 0.8em;
+}
+.icon-flecha-abajo:before {
+	content: "\e601";
+	color: #DD4F24;
+	text-decoration: none;
+}
+.icon-flecha-arriba:before {
+	content: "\e602";
+	color: #4CC54C;
+	text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 a{
 	color: #22BCE0;
 }
 
 body{
 	background: #EEEEEE;
-	font-family: Arial;
+	font-family: "Open Sans";
 	font-size: 16px;
 }
 
@@ -63,16 +124,24 @@ header #avatar img {
 	width: 55px;
 }
 
-header #logo img {
+header #logo{
 	border-right: 1px solid white;
 	margin-right: 0.5em;
+}
+
+header #logo img {
 	padding-right: 0.5em;
 	width: 52px;
+	-webkit-transition: .5s;
+}
+
+header #logo img:hover {
+	-webkit-transform:rotate(360deg);	
 }
 
 nav{
-	background: #80BCA3;
-	padding: 0 0.5em;
+	background: #EF6533;
+	padding: 0 6em 0 1em;
 	position: relative;
 }
 
@@ -99,17 +168,32 @@ nav ul #publicar_nav a{
 	border-radius: 5px;
 	box-shadow: rgba(0,0,0,0.5) 5px 5px 20px;
 	font-style: italic;
-	padding: 0.8em 0.5em;
+	padding: 0.8em 0.5em 0.8em 2.5em;
 	text-decoration: none;
 	text-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
 }
 
+nav ul #publicar_nav a:before{
+	position: absolute;
+	left: 0.2em;
+	top: 0.8em;
+}
+
+nav ul #publicar_nav a:hover:before{
+	font-size: 20px;
+	
+}
+
+nav ul li a:hover{
+	background: #343B54;
+}
 
 nav ul li a{
 	color: white;
 	display: block;
-	padding: 0.5em 0;
+	padding: 0.5em;
 	text-decoration: none;
+	-webkit-transition: .3s;
 }
 
 
@@ -181,18 +265,42 @@ nav ul li a{
 	width: 90%;
 }
 
+#contenido .item .votacion a{
+	text-decoration: none;
+}
+
 #contenido .item .votacion .comentarios_item,
 #contenido .item .votacion .guardar_item
 {
 	float: right;
 }
 
+aside{
+	display: none;
+}
+
+@media screen and (min-width: 768px){
+
+	#contenido{
+		overflow: hidden;
+	}
+	#contenido .item{
+		width: 49%;
+		float: left;
+	}
+	#contenido .item:nth-child(odd){
+		margin-right: 2%;
+	}
+}
 
 
-
-
-
-
+@media screen and (min-width: 1000px){
+	aside{
+		display: block;
+		float: right;
+		margin: 1em;
+	}
+}
 
 
 
